# python-package

./: 404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  setup_template.py  sitemap.xml  template-config.md
.github/: CONTRIBUTING.md  README.md
.github/workflows/: publish-package.yml
contributing/: index.html
docs/: index.md  overview.md  setup.md
overview/: index.html
package_name/: __init__.py  client.py  config.py  exceptions.py
package_name/utils/: __init__.py
scripts/: deploy-package.sh
setup/: index.html
tests/: test_structure.py  test_template.py
