[project]
name = "{PACKAGE_NAME}"
version = "0.1.0"
description = "{PACKAGE_DESCRIPTION}"
authors = [
    { name = "{AUTHOR_NAME}", email = "{AUTHOR_EMAIL}" }
]
keywords = ["{KEYWORD_1}", "{KEYWORD_2}", "{KEYWORD_3}", "{KEYWORD_4}"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.11.7",
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://{GITHUB_USERNAME}.github.io/{REPOSITORY_NAME}/"